src/test/ui/borrowck/issue-7573.stderr
error: borrowed data cannot be stored outside of its closure
  --> $DIR/issue-7573.rs:31:27
   |
27 |     let mut lines_to_use: Vec<&CrateId> = Vec::new();
   |                               - cannot infer an appropriate lifetime
28 |         //~^ NOTE cannot infer an appropriate lifetime
29 |     let push_id = |installed_id: &CrateId| {
   |                   ------------------------ borrowed data cannot outlive this closure
30 |         //~^ NOTE borrowed data cannot outlive this closure
31 |         lines_to_use.push(installed_id);
   |                           ^^^^^^^^^^^^ cannot be stored outside of its closure

error: aborting due to previous error

